--- a/proj-preparation/src/app/app.component.html
+++ b/proj-preparation/src/app/app.component.html
@@ -16,4 +16,11 @@
 
 <app-add-course></app-add-course>
 <!-- <app-login></app-login> -->
-<app-courses></app-courses> 
+<div class='wrapper'>
+  <div class='content'>
+    <app-header></app-header>
+    <app-breadcrumb></app-breadcrumb>
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
