--- a/proj-preparation/src/app/app.component.html
+++ b/proj-preparation/src/app/app.component.html
@@ -14,8 +14,8 @@
 <!-- <app-courses *ngIf="isLogin; else logger"></app-courses> -->
 <!--
 
-<app-add-course></app-add-course>
-<!-- <app-login></app-login> -->
+<!-- <app-add-course></app-add-course> -->
+
 <div class='wrapper'>
   <div class='content'>
     <app-header></app-header>
