--- a/proj-preparation/src/app/add-course/components/add-course/add-course.component.html
+++ b/proj-preparation/src/app/add-course/components/add-course/add-course.component.html
@@ -12,12 +12,9 @@
       <div>
         <app-creation [formControl]='creationControl'></app-creation>
       </div>
-      <!-- <div>
-        <app-duration [formControl]='durationControl' [exist]='exist'></app-duration>
-      </div> -->
-      <!--<div>
-        <app-authors></app-authors>
-      </div>-->
+      <div>
+        <app-duration [formControl]='durationControl'></app-duration>
+      </div>
       <div class='buttons'>
         <button type='button' (click)='onSave()'>Save</button>
         <button type='button' (click)='onCancel()'>Cancel</button>
