--- a/proj-preparation/src/app/shared/components/login/login.component.html
+++ b/proj-preparation/src/app/shared/components/login/login.component.html
@@ -1,25 +1,25 @@
 <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input class="form-control"  type="text" name="username" id="username" [(ngModel)]="username">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input class="form-control" type="text" name="password" id="password"  [(ngModel)]="pass">
-                            </div>
-                            <div class="form-group" >
-                                <input (click)="getU()" type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            </div>
-                        </form>
-                    </div>
+      <h3 class="text-center text-white pt-5">Login form</h3>
+      <div class="container">
+        <div id="login-row" class="row justify-content-center align-items-center">
+          <div id="login-column" class="col-md-6">
+            <div id="login-box" class="col-md-12">
+              <form id="login-form" class="form" action="" method="post">
+                <h3 class="text-center text-info">Login</h3>
+                <div class="form-group">
+                  <label for="username" class="text-info">Login:</label><br>
+                  <input class="form-control"  type="text" name="login" id="login" [(ngModel)]="login">
                 </div>
+                <div class="form-group">
+                  <label for="password" class="text-info">Password:</label><br>
+                  <input class="form-control" type="password" name="password" id="password"  [(ngModel)]="password">
+                </div>
+                <div class="form-group" >
+                  <input (click)="logIn()" type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                </div>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
     </div>
