implemented some feautures

--- a/proj-preparation/src/app/pages/search-page/course/course.component.html
+++ b/proj-preparation/src/app/pages/search-page/course/course.component.html
@@ -10,7 +10,7 @@
     <div class="text-right col-2">
       <div class="btn-group-vertical" role="group" aria-label="Basic example">
         <button class="btn btn-success" type="button" (click)='onEdit(course)'>Edit</button>
-        <button class="btn btn-danger" type="button">Delete</button>
+        <button class="btn btn-danger" type="button"(click)='onDelete($event)'>Delete</button>
       </div>
     </div>
   </article>
