--- a/proj-preparation/src/app/pages/search-page/courses/courses.component.html
+++ b/proj-preparation/src/app/pages/search-page/courses/courses.component.html
@@ -1,14 +1,7 @@
   <div class="courses-container">
-    <app-search>
-      <div class="row">
-        <div class="col-8">
-            <input type="text" #search name="search" id="search" [(ngModel)]="searchText"/>
-            <button type="button" class="ml-5 btn btn-outline-dark" (click)="setSearchable()">Search</button>
-        </div>
-        <div class="col text-right">
-          <button type="button" class="btn btn-outline-dark" (click)='onAddCourse()'>Add course</button>
-        </div>
-      </div>
+    <app-search
+      (search)='onSearch($event)'
+      (changedSearchValue)='onChangedSearchValue($event)'>
     </app-search>
     <app-course
      *ngFor='let course of courses | orderBy: "creation"'
