--- a/proj-preparation/src/app/pages/search-page/search/search.component.html
+++ b/proj-preparation/src/app/pages/search-page/search/search.component.html
@@ -1,3 +1,12 @@
-<div class="container-fluid">
-  <ng-content></ng-content>
-</div>
+  <div class="row">
+    <div class="col-8">
+        <input type="text"
+               name="search"
+               [ngModel]="searchValue"
+               (ngModelChange)='onChangedSearchValue($event)'
+               (keyup)='onSearch()'/>
+    </div>
+    <div class="col text-right">
+      <button type="button" class="btn btn-outline-dark" (click)='onAddCourse()'>Add course</button>
+    </div>
+  </div>
