--- a/proj-preparation/src/app/add-course/components/creation-date/creation-date.component.html
+++ b/proj-preparation/src/app/add-course/components/creation-date/creation-date.component.html
@@ -1,2 +1,2 @@
   <p>Creation:</p>
-  <input [formControl]="creationControl" name="creationDate" type="text">
+  <input [name]="creationDate" (blur)="onTouched()" [disabled]="disabled" (input)="onChange($event.target.value)" type="text">
