--- a/proj-preparation/src/app/shared/components/header/header.component.html
+++ b/proj-preparation/src/app/shared/components/header/header.component.html
@@ -1,13 +1,9 @@
-<div class="mt-2 container-fluid">
-  <div class="row">
-  		<div class="col-10">
-        <p>Logo</p>
-      </div>
-      <div class="col" *ngIf='isAuthenticated()'>
-        <p>You're signed in as <span>{{name.first}} {{name.last}}</span></p>
-      </div>
-      <div class="text-right col" *ngIf='isAuthenticated()'>
-        <button type="button" class="btn btn-outline-dark .navbar-right" (click)="onLogout()"></button>
-      </div>
+<header>
+	<div class="logo">
+    <p>Logo</p>
   </div>
-</div>
+  <div class="auth" *ngIf='isAuthenticated()'>
+    <p>You're signed in as <span>{{name.first}} {{name.last}}</span></p>
+    <button type="button" class="btn btn-outline-dark .navbar-right" (click)="onLogout()">Logout</button>
+  </div>
+</header>
