implemented authors component and working on loader service

--- a/proj-preparation/src/app/add-course/components/add-course/add-course.component.css
+++ b/proj-preparation/src/app/add-course/components/add-course/add-course.component.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ECEAF9;
+  /* background-color: #ECEAF9; */
   border-radius: 4px;
 }
 
