--- a/proj-preparation/src/app/app.component.html
+++ b/proj-preparation/src/app/app.component.html
@@ -15,7 +15,7 @@
 <!--
 
 <!-- <app-add-course></app-add-course> -->
-
+<!-- <app-loader></app-loader> -->
 <div class='wrapper'>
   <div class='content'>
     <app-header></app-header>
