--- a/proj-preparation/src/app/add-course/components/add-course/add-course.component.html
+++ b/proj-preparation/src/app/add-course/components/add-course/add-course.component.html
@@ -15,6 +15,9 @@
       <div>
         <app-duration [formControl]='durationControl'></app-duration>
       </div>
+      <div>
+        <app-authors [formControl]='authorsControl'></app-authors>
+      </div>
       <div class='buttons'>
         <button type='button' (click)='onSave()'>Save</button>
         <button type='button' (click)='onCancel()'>Cancel</button>
