--- a/proj-preparation/src/app/app.component.html
+++ b/proj-preparation/src/app/app.component.html
@@ -15,11 +15,12 @@
 <!--
 
 <!-- <app-add-course></app-add-course> -->
-<!-- <app-loader></app-loader> -->
+<app-loader></app-loader>
 <div class='wrapper'>
   <div class='content'>
     <app-header></app-header>
     <app-breadcrumb></app-breadcrumb>
     <router-outlet></router-outlet>
   </div>
+    <app-footer></app-footer>
 </div>
