--- a/proj-preparation/src/app/shared/components/footer/footer.component.html
+++ b/proj-preparation/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,1 @@
-<footer class="page-footer font-small blue">
-  <div class="footer-copyright text-center py-3">{{footerText}}</div>
-</footer>
+<footer class="course-footer">All rights reserved 2019</footer>
