--- a/proj-preparation/src/app/add-course/components/add-course/add-course.component.html
+++ b/proj-preparation/src/app/add-course/components/add-course/add-course.component.html
@@ -3,11 +3,11 @@
     <form [formGroup]='courseForm'>
       <div>
         <p>Title:</p>
-        <input [formControl]='titleControl' type='text' name='title' placeholder='Title'>
+        <input class='title' [formControl]='titleControl' type='text' name='title' placeholder='Title'>
       </div>
       <div>
         <p>Description:</p>
-        <textarea [formControl]='descriptionControl' type='text' name='description' placeholder='Some words about this course'></textarea>
+        <textarea class='description' [formControl]='descriptionControl' type='text' name='description' placeholder='Some words about this course'></textarea>
       </div>
       <div>
         <app-creation [formControl]='creationControl'></app-creation>
@@ -19,8 +19,8 @@
         <app-authors [formControl]='authorsControl'></app-authors>
       </div>
       <div class='buttons'>
-        <button type='button' (click)='onSave()'>Save</button>
-        <button type='button' (click)='onCancel()'>Cancel</button>
+        <button class='save-course' type='button' (click)='onSave()'>Save</button>
+        <button class='cancel-edit' type='button' (click)='onCancel()'>Cancel</button>
       </div>
     </form>
   </div>
