--- a/proj-preparation/src/app/add-course/components/authors/authors.component.css
+++ b/proj-preparation/src/app/add-course/components/authors/authors.component.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
 }
-input {
+.suggest-authors {
   height: 23px;
   width: 160px;
   margin-bottom: 15px;
@@ -17,7 +17,7 @@ input {
   font-family: Calibri, sans-serif;
   font-size: 12px;
 }
-input:hover {
+.suggest-authors {
   border:none;
   border-radius: 0px;
 }
