--- a/proj-preparation/src/app/add-course/components/duration/duration.component.html
+++ b/proj-preparation/src/app/add-course/components/duration/duration.component.html
@@ -1,3 +1,3 @@
 <p>Duration:</p>
-<input type='text' [name]='duration' [formControl]='durationControl'/>
+<input class='duration' type='text' [name]='duration' [formControl]='durationControl'/>
 <span></span>
