--- a/proj-preparation/src/app/pages/search-page/courses/courses.component.html
+++ b/proj-preparation/src/app/pages/search-page/courses/courses.component.html
@@ -4,7 +4,7 @@
       (changedSearchValue)='onChangedSearchValue($event)'>
     </app-search>
     <app-course
-     *ngFor='let course of courses | orderBy: "creation"'
+     *ngFor='let course of courses | orderBy'
      [course]='course'
      (delete)='onDelete($event)'>
    </app-course>
