--- a/proj-preparation/src/app/shared/components/footer/footer.component.css
+++ b/proj-preparation/src/app/shared/components/footer/footer.component.css
@@ -1,7 +1,9 @@
-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+.course-footer {
+  height: 60px;
   width: 100%;
+  margin: 20px 0;
+  background-color: #ECEAF9;
+  line-height: 60px;
+  font-size: 12px;
   text-align: center;
 }
